[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/Environment/SpecialPost.png" type="Texture" id=1]
[ext_resource path="res://Textures/Special Stage/Emerald.png" type="Texture" id=2]
[ext_resource path="res://Textures/HUD/Inventory.jpg" type="Texture" id=3]
[ext_resource path="res://HUD/ThemeBig.tres" type="Theme" id=4]
[ext_resource path="res://Gimmicks/SpecialPost.gd" type="Script" id=5]

[sub_resource type="QuadMesh" id=4]
size = Vector2( 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_color = Color( 1, 1, 1, 0.776471 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=1]
size = Vector2( 1, 2 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = ExtResource( 1 )

[sub_resource type="CylinderShape" id=3]
radius = 0.470373

[node name="SpecialPost" type="Area" groups=["RubyWatcher"]]
script = ExtResource( 5 )

[node name="Ruby" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.88963, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Pole" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1969, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1969, 0 )
shape = SubResource( 3 )

[node name="RingWarning" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.572549 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -405.0
margin_top = -128.5
margin_right = 405.0
margin_bottom = 128.5
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RingWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.0
margin_top = -87.5
margin_right = 386.0
margin_bottom = 87.5
theme = ExtResource( 4 )
text = "You need at least 25 rings
to enter the special stage."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
